added geoJSON -- starting over

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,16 +34,15 @@
 
     <div id="quizContainer"> </div>
 
-
-
-
-
 	
   </div>
 
 
 
-// <script>
+
+
+<!-- 
+<script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiYnJpdHRhbnlhbmRyZXdzIiwiYSI6ImNpbTZsMm0weTAyaG51Mm00aGdpYm4xOTIifQ.qhTRY7ANO3U012XH56GNkA';
 var map = new mapboxgl.Map({
     container: 'map', // container id
@@ -51,7 +50,7 @@ var map = new mapboxgl.Map({
     center: [-122.420679, 37.772537], // starting position
     zoom: 6 // starting zoom
 });
-</script>
+</script> -->
 
 
   <script src="js/bundle.js"></script>
