--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,6 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js'></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.15.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.15.0/mapbox-gl.css' rel='stylesheet' />
-  
 
 
 
@@ -22,35 +21,19 @@
 <body>
 
   <div class="app">
-	
 
-	<div id='map'></div>
-  	
-	
-	<div class="plane-container">
-		<!-- <img width="80" class="plane" src="http://icons.iconseeker.com/png/fullsize/elements-alone/plane-1.png"			  -->
-	</div>
-
-
-    <div id="quizContainer"> </div>
 
 	
-  </div>
-
-
-
-
-
-<!-- 
+<div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiYnJpdHRhbnlhbmRyZXdzIiwiYSI6ImNpbTZsMm0weTAyaG51Mm00aGdpYm4xOTIifQ.qhTRY7ANO3U012XH56GNkA';
 var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v8', //stylesheet location
-    center: [-122.420679, 37.772537], // starting position
-    zoom: 6 // starting zoom
+    center: [31.267, 121.52], // starting position
+    zoom: 9 // starting zoom
 });
-</script> -->
+</script>
 
 
   <script src="js/bundle.js"></script>
