--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,14 +5,6 @@
   <link rel="stylesheet" href="css/main.css">
 
 
-    <meta charset='utf-8' />
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js'></script>
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.15.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.15.0/mapbox-gl.css' rel='stylesheet' />
-
-
-
 </head>
 
 
@@ -20,20 +12,17 @@
 
 <body>
 
-  <div class="app">
-
-
+ <div class="app">
 	
-<div id='map'></div>
-<script>
-mapboxgl.accessToken = 'pk.eyJ1IjoiYnJpdHRhbnlhbmRyZXdzIiwiYSI6ImNpbTZsMm0weTAyaG51Mm00aGdpYm4xOTIifQ.qhTRY7ANO3U012XH56GNkA';
-var map = new mapboxgl.Map({
-    container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v8', //stylesheet location
-    center: [31.267, 121.52], // starting position
-    zoom: 9 // starting zoom
-});
-</script>
+		<div class="map">	
+		<img src="../images/mapimage.png">
+		</div>
+
+
+
+
+</div>
+
 
 
   <script src="js/bundle.js"></script>
