final commit yay!

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,8 @@
 <body>
 
  <div class="app">
+
+ <div class="headline">click all the locations on the map!</div>
 	
 		<div class="map">	
 		<img src="../images/mapimage.png">
